--- a/.trash/2025-03-03-周一 2.md
+++ b/.trash/2025-03-03-周一 2.md
@@ -11,6 +11,13 @@ cssclasses:
 
 <br>%% %%
 
+<!-- ```dataviewjs
+const {Daily, Research} = customJS
+Daily.display(dv, Research)
+``` -->
+
+<br>%% %%
+
 ### TaskList
 
 ```dataviewjs
@@ -19,6 +26,7 @@ dv.taskList(
     .file.tasks
     .where(t =>{
       const today = dv.current().date;  // 获取当前页面的 `date` 字段
+      console.log(today)
       // 筛选今日完成的任务
       return (t.completed && dv.compare(t.completed, today) == 0) ||
       // 筛选今日到期的任务
@@ -31,7 +39,7 @@ dv.taskList(
 
 <br>%% %%
 
-<!-- ### NoteList
+### NoteList
 
 %% ### ReadList
 
@@ -44,5 +52,5 @@ WHERE file.mtime>=date(<% tp.date.now("YYYY-MM-DD") %>) AND file.mtime<date(<% t
 SORT file.mtime desc
 ```
 
-<br>
- %% -->
+<br> 
+ %%
