--- a/.trash/2025-03-03-周一 3.md
+++ b/.trash/2025-03-03-周一 3.md
@@ -11,6 +11,13 @@ cssclasses:
 
 <br>%% %%
 
+<!-- ```dataviewjs
+const {Daily, Research} = customJS
+Daily.display(dv, Research)
+``` -->
+
+<br>%% %%
+
 ### TaskList
 
 ```dataviewjs
@@ -31,7 +38,7 @@ dv.taskList(
 
 <br>%% %%
 
-<!-- ### NoteList
+### NoteList
 
 %% ### ReadList
 
@@ -44,5 +51,5 @@ WHERE file.mtime>=date(<% tp.date.now("YYYY-MM-DD") %>) AND file.mtime<date(<% t
 SORT file.mtime desc
 ```
 
-<br>
- %% -->
+<br> 
+ %%
