--- a/Diary/Daily/2025-03-03-周一.md
+++ b/Diary/Daily/2025-03-03-周一.md
@@ -22,7 +22,7 @@ Daily.display(dv, Research)
 
 ```dataviewjs
 dv.taskList(
-  dv.pages('"Projects" or "Events" or "Literature" or "Blist" or "Courses" or "Amap/Todo List" or "Amap/Inbox"')
+  dv.pages('"Projects" or "Events" or "Literature" or "BTemp" or "Courses" or "Amap/Todo List" or "Amap/Inbox"')
     .file.tasks
     .where(t =>{
       const today = dv.current().date;  // 获取当前页面的 `date` 字段
@@ -31,14 +31,14 @@ dv.taskList(
       // 筛选今日到期的任务
       (t.due && dv.compare(t.due, today) == 0) ||
       // 筛选今日创建的任务
-      (dv.compare(t.mtime, dv.date("YYYY-MM-DD")) == 0)
+      (dv.compare(t.ctime, today) == 0)
     })
 )
 ```
 
 <br>%% %%
 
-### NoteList
+<!-- ### NoteList
 
 %% ### ReadList
 
@@ -51,5 +51,5 @@ WHERE file.mtime>=date(<% tp.date.now("YYYY-MM-DD") %>) AND file.mtime<date(<% t
 SORT file.mtime desc
 ```
 
-<br> 
- %%
+<br>
+ %% -->
